# src/core/routes.ts
@@ -1,10 +1,12 @@
 import {NextFunction, Request, Response, Router} from 'express';
 import Auth from '../controllers/AuthController/authController';
+import Provider from '../controllers/ProviderController/providerController';
 import passport from 'passport';
 import middlewares from '../middlewares/passport';
 import authMessenger from '../controllers/AuthController/authMessengerController';
 import swaggerUi from 'swagger-ui-express';
 import * as swaggerDocument from '../docAPI/swagger.json';
+import Token from '../models/Token';
 
 const createRoutes = (app: Router) => {
   app.get('/', (req: Request, res: Response) => {
@@ -24,6 +26,14 @@ const createRoutes = (app: Router) => {
   app.post('/api/log-in', Auth.logIn);
   app.get('/api/auth-me', middlewares.authMiddleware, Auth.authMe);
   app.delete('/api/logout', middlewares.authMiddleware, Auth.logout);
+
+  app.post('/api/provider', Provider.create);
+
+  app.delete('/api/token', (req:Request, res: Response)=>{
+    Token.deleteMany().exec()
+        .then((result)=>res.status(200).json({}))
+        .catch((err)=>res.status(500).json({}));
+  });
 
   app.use('/api', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 };
